--- a/Style.css
+++ b/Style.css
@@ -3,7 +3,6 @@
 .header {
   background: #FFFBFA;
   padding: 20px;
-  width: 100%;
   box-shadow:0px 10px  50px black;
   font-family: 'Montserrat', sans-serif;
   font-size: 30px;
@@ -59,71 +58,22 @@
   border-bottom: 1px solid black;
 }
 
-.input :focus {outline: none;}
+input:focus {
+  outline: none;
+}
 
-/* Dropdown Button */
-.dropbtn {
+.mdb-select-md-form {
+  padding: 5px;
+  width: 200px;
   background: none;
-  color: black;
-  padding: 16px;
-  font-size: 16px;
-  border: 1px solid black;
+  border: 1px black solid;
+  border-radius: 10px;
+}
+
+.mdb-select-md-form:hover {
   cursor: pointer;
-  margin-top: 3px;
 }
 
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-  background-color: rgba(0, 0, 0, 0.6);
-  color: white;
-}
-
-/* The search field */
-#myInput {
-  box-sizing: border-box;
-  background-image: url('searchicon.png');
-  background-position: 14px 12px;
-  background-repeat: no-repeat;
-  font-size: 15px;
-  padding: 14px 20px 12px 45px;
-  border: none;
-  border-bottom: 1px solid #ddd;
-}
-
-/* The search field when it gets focus/clicked on */
-#myInput:focus {outline: none;}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background: none;
-  min-width: 230px;
-  border: 1px solid black;
-  z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
-
-.content {
-  font-size: 15px;
-  border-top: 1px solid black;
+.mdb-select-md-form:focus {
+  cursor: pointer;
 }
