--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@100&display=swap');
 
+p {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
+}
+
 .header {
   background: #FFFBFA;
   padding: 20px;
@@ -31,14 +36,14 @@
   border: 1px solid black;
   padding: 10px;
   width: 270px;
+  display: inline-block;
 }
 
 .answer {
-  width: 300px;
-  height: 200px;
-  margin: 10px;
+  padding: 10px;
+  width: 270px;          
   border: 1px solid black;
-  float: right;
+  display: inline-block;
 }
 
 .menu :hover {
@@ -76,4 +81,22 @@ input:focus {
 
 .mdb-select-md-form:focus {
   cursor: pointer;
+}
+
+.calculate {
+  width: 200px;
+  background: none;
+  border: 1px black solid;
+  border-radius: 10px;
+  padding: 7px;
+  font-size: 15px;
+}
+
+.calculate:hover {
+  cursor: pointer;
+}
+
+.answer1 {
+  font-size: 12px;
+  font-family: 'Montserrat', sans-serif;
 }
